Except Order_Products everything is ready and working. Wrote some "TODO" in controllers
